--- a/UI.html
+++ b/UI.html
@@ -26,24 +26,20 @@
 <script src="js/header.js"></script>
 <!-- Common header end-->
 
+<div id="KV">
+  <!--<h1>WELCOME TO MY WORKSHOP</h1>-->
+  <div class="inner">
+    <p style="font-size: 2;">Delphine Lan is a Taiwan based multidisciplinary designer specialising in <b> 💁‍♀️ Digital Design and Graphic Design.</b></p>
+    <ul>
+      <li><a href="https://codepen.io/DelphineLan/" target="_blank"><img src="img/icon_codepen.svg" width="30" height="30"></a></li>
+      <li><a href="https://tw.linkedin.com/in/delphine-lan-756b11b9" target="_blank"><img src="img/icon_linkedin.svg" width="30" height="30"></a></li>
+      <li><a href="mailto:sun7722blue@hotmail.com" target="_blank"><img src="img/icon_email.svg" width="30" height="30"></a></li>
+      <li><a href="Delphine_CV.pdf" target="_blank"><img src="img/icon_cv.svg" width="30" height="30"></a></li>
+    </ul>
+  </div>
+</div>
+
 <div id="webdesign" class="container">
-  <h2 class="title top-25">UI DESIGN</h2>
-  <hr>
-  <p class="title_scribe bottom-70">Delphine design User Interface products for App and Website.</p>
-  <!--pic-banner-->
-  <!--<div id="pic-banner" class="col-md-4">
-    <img src="img/UI_anueicon.png" width="550" height="500" class="img-fluid">
-    <div class="caption">
-      <a href="UI_icon_anue.html" class="captiondetails">
-        <div class="caption-warp">
-          <div class="caption-text center-text">
-            <h5>Icons in Anue</h5>
-            <p class="font-subdark center-text">Icon design</p>
-          </div>
-        </div>
-      </a>
-    </div>
-  </div>-->
   <div id="pic-banner" class="col-md-4">
     <img src="img/ui_app_socialmedia.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
