--- a/visual.html
+++ b/visual.html
@@ -139,7 +139,7 @@
       </a>
     </div>
   </div>
-  <div id="pic-banner" class="col-md-4">
+  <!--<div id="pic-banner" class="col-md-4">
     <img src="img/visual_peruga.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="visual_peruga.html" class="captiondetails">
@@ -151,7 +151,7 @@
         </div>
       </a>
     </div>
-  </div>
+  </div>-->
   <div id="pic-banner" class="col-md-4">
     <img src="img/visual_laman.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
