--- a/visual_Invesco.html
+++ b/visual_Invesco.html
@@ -26,7 +26,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">Invesco</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">RWD Campaign Gage<br>
+    <p class="title_scribe w-900 bottom-25">RWD Campaign Page<br>
         The entire event page is based on Van Gogh's The Starry Night.<br>
         I designed the key visual and used html and css to complete them.</p>
     <a class="bottom-25" href="https://campaign.cnyes.com/topics/invescoGIGC/" target="blank">link to web →</a>
