--- a/visual.html
+++ b/visual.html
@@ -61,7 +61,7 @@
       </a>
     </div>
   </div>
-  <div id="pic-banner" class="col-md-4">
+  <!--<div id="pic-banner" class="col-md-4">
     <img src="img/visual_Delphine.png" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="visual_Delphine.html" class="captiondetails">
@@ -73,7 +73,7 @@
         </div>
       </a>
     </div>
-  </div>
+  </div>-->
   <div id="pic-banner" class="col-md-4">
     <img src="img/visual_iRoo.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
