--- a/about.html
+++ b/about.html
@@ -35,14 +35,14 @@
   <div class="col-md-6 about_me">
     <h3>Hi there, I'm Delphine Lan! 👋 </h3>
     <h5>Design</h5>
-    <p class="font-gray"> ▪ User interface design and process planning <br>
+    <p class="font-gray"> ▪ User interface design and process plan <br>
       ▪ Wireframe and prototype production <br>
       ▪ Develop project guideline specifications<br> 
       ▪ Product experience design, visual design <br>
       ▪ Product image component design<br>
     
     <h5>Cross-departmental cooperation</h5>
-    <p class="font-gray">▪ Communication with PM to discuss product pre-operation  <br>
+    <p class="font-gray">▪ Communicate with PM to discuss product pre-operation  <br>
       ▪ Assist front-end engineers to complete product realization</p>
     </div>
 
