--- a/UI_socialmedia_app.html
+++ b/UI_socialmedia_app.html
@@ -29,7 +29,7 @@
     <p class="title_scribe w-800 bottom-25">Anue Hao is a social-media platform focusing on financial management. Readers can follow the big and small events of the day through a timeline and personalized functions. For creators, it is a combination of industry-exclusive editors and multimedia.</p>
     <img class="img-fluid w-900 bottom-70" src="img/mp_app1@2x.png" alt="">
 
-    <h6 class="w-900 bottom-25">The challenge<span class="bluebar"></span></h6>
+    <h6 class="w-900 bottom-25">The challenge<span class="orangebar"></span></h6>
     <p class="w-900 bottom-70 left-text">▪ Define the differents between the members in the app and the roles in the Anue Hao, process the interface user switching methods.<br>
 
       ▪ Define the overall product scale, function and priority.<br>
@@ -39,7 +39,7 @@
       ▪ The correlation between user behavior analysis, and design based on user behavior.
     </p>
 
-    <h6 class="w-900 bottom-25">My role in this project <span class="bluebar"></span></h6>
+    <h6 class="w-900 bottom-25">My role in this project <span class="orangebar"></span></h6>
     <p class="w-900 bottom-70 left-text">My responsibility of this product starting from initial concept design, feature roadmap planning, user flow, visual design, prototyping, delivering high-fidelity mockups and communicate to developers. <br><br>
 
       Our team members include:<br>
@@ -51,7 +51,7 @@
       ▪ One research and developers<br>
     </p>
 
-    <h6 class="w-900 bottom-25">Identify user flows & prototype ideas<span class="bluebar"></span></h6>
+    <h6 class="w-900 bottom-25">Identify user flows & prototype ideas<span class="orangebar"></span></h6>
     <p class="w-900 bottom-25 left-text">Use cases of different entry points and journey. Communicate user flows & review prototypes with core team.
     </p>
     <img class="img-fluid w-900" src="img/mp_app3@2x.png" alt="">
@@ -60,12 +60,12 @@
     <img class="img-fluid w-900" src="img/mp_app6@2x.png" alt="">
     <img class="img-fluid w-900" src="img/mp_app7@2x.png" alt="">
     <img class="img-fluid w-900" src="img/mp_app8@2x.png" alt="">
-    <img class="img-fluid w-900" src="img/mp_app9@2x.png" alt="">
+    <img class="img-fluid w-900 bottom-70" src="img/mp_app9@2x.png" alt="">
 
-    <h6 class="w-900 bottom-25">minimum viable product, MVP<span class="bluebar"></span></h6>
+    <h6 class="w-900 bottom-25">minimum viable product, MVP<span class="orangebar"></span></h6>
     <p class="w-900 bottom-25 left-text">Consider the team menbers was limited and development time is too long. The goal was to make the product lunched in the minimum viable condition. It was a challenge to architecture the product flow and design, and also needed to be adjusted a lot. I discussed with the PM through the “top down” method. The main points was: The function of commercial value, constantly deducting the screen process, redesigning...etc.
     </p>
-    <img class="img-fluid w-900" src="img/mp_app10@2x.png" alt="">
+    <img class="img-fluid w-900 bottom-70" src="img/mp_app10@2x.png" alt="">
 
     <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
 </div>
