--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
       ★ <b><a href="https://hao.cnyes.com/" target="blank">Hao.cnyes</a></b> : This project is a social media platform
       focusing on financial management. My work is cross-platform UI / UX design including APP and RWD web and CMS system. Discussing storyboard and planning functions with PM, product ideas, market research, wireframe planning and visual design.<br>
       ★ UI revised design of the news website.<br>
-      ★ Design the company's B2B cooperation webpage and campaign page then complete all of this by html and css.</p>
+      ★ Design the company's B2B cooperation webpage and campaign page then complete all of them by html and css.</p>
     
       <p class="top-16 font-gray">2014 - 2019</p>
       <p class="font-bold font-subdark">Web Designer | AMC 空中美語</p>
