--- a/UI_socialmedia_web.html
+++ b/UI_socialmedia_web.html
@@ -81,7 +81,7 @@
       At first we wanted to provide users more information list in one screen, so we design the mini size image. However, according to most users feedback, we found that readers still like to see big pictures, so we changed the image size.</p>
       <img class="img-fluid w-800 bottom-70" src="img/mp_web7@2x.png" alt="">
 
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI/UX ></a>
 </div>
 
 <!--page-->
