--- a/UI_socialmedia_app.html
+++ b/UI_socialmedia_app.html
@@ -67,7 +67,7 @@
     </p>
     <img class="img-fluid w-900 bottom-70" src="img/mp_app10@2x.png" alt="">
 
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI/UX ></a>
 </div>
 
 <!--page-->
