--- a/UI_socialmedia_cms.html
+++ b/UI_socialmedia_cms.html
@@ -84,23 +84,12 @@
   });
 </script>
 <script language=JavaScript>
-  function password() { 
-  var testV = 1; 
-  var pass1 = prompt('请输入密码:',''); 
-  while (testV < 3) { 
-  if (!pass1) 
-  history.go(-1); 
-  if (pass1 == "delphine") { 
-  alert('密码正确!'); 
-  break; 
-  } 
-  testV+=-1; 
-  var pass1 = prompt('密码错误!请重新输入:'); 
-  } 
-  if (pass1!="password" & testV ==3) 
-  history.go(-1); 
-  return " "; 
-  } 
+  const USER_PWD = 'delphine';
+  const password = prompt('輸入密碼');
+
+  if (password !== USER_PWD) {
+    window.history.go(-1)
+  }
   document.write(password()); 
 </script>
 <script src="js/script.js"></script>
