--- a/UI_socialmedia_app.html
+++ b/UI_socialmedia_app.html
@@ -48,7 +48,7 @@
       
       ▪ One project managers<br>
       
-      ▪ One research and developers<br>
+      ▪ Two research and developers<br>
     </p>
 
     <h6 class="w-900 bottom-25">Identify user flows & prototype ideas<span class="orangebar"></span></h6>
