--- a/UI_socialmedia_cms.html
+++ b/UI_socialmedia_cms.html
@@ -43,7 +43,7 @@
       ▪ research and developers (pending…)
     </p>
 
-    <h6 class="w-800 bottom-25 center-text"><span class="font-red"> ﹛ </span>Goal of this projecte<span class="font-red"> ﹜ </span></h6>
+    <h6 class="w-800 bottom-25 center-text"><span class="font-red"> ﹛ </span>Goal of this project<span class="font-red"> ﹜ </span></h6>
     <p class="w-800 bottom-25 left-text">▪ From user’s point of view, we need to provide an easy / quick way for user to understand potential areas for improvement.<br><br>
 
       <s>▪ From company’s point of view, we have to manage users sustem so that we can control the quality of users articles.</s><br>
