--- a/UI_socialmedia_cms.html
+++ b/UI_socialmedia_cms.html
@@ -47,7 +47,7 @@
     <p class="w-800 bottom-25 left-text">▪ From user’s point of view, we need to provide an easy / quick way for user to understand potential areas for improvement.<br><br>
 
       <s>▪ From company’s point of view, we have to manage users sustem so that we can control the quality of users articles.</s><br>
-      (Consider the team menbers was limited and development time, the goal changed from B to B&C to B to C.)
+      (Consider the team menbers was limited and development time, the goal changed from <B to B&C> to <B to C>.)
     </p>
     <img class="img-fluid w-900 bottom-70" src="img/hao_cms3@2x.png" alt="">
 
