--- a/UI_socialmedia_web.html
+++ b/UI_socialmedia_web.html
@@ -61,7 +61,7 @@
     <img class="img-fluid w-800 bottom-70" src="img/mp_web0@2x.png" alt="">
 
     <h6 class="w-900 bottom-25">Identify guidelines & user interface<span class="bluebar"></span></h6>
-    <p class="w-900 bottom-25 left-text">Begin to design the entire RWD website, including color specification 、timeline wall、post editor...etc</p>
+    <p class="w-900 bottom-25 left-text">Begin to design the entire RWD website, including color palette 、timeline wall、post editor...etc</p>
     <img class="img-fluid w-900" src="img/mp_web1@2x.png" alt="">
     <img class="img-fluid w-900" src="img/mp_web2@2x.png" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/mp_web3@2x.png" alt="">
