--- a/UI_socialmedia_app.html
+++ b/UI_socialmedia_app.html
@@ -58,7 +58,7 @@
     <p class="w-900 bottom-25 left-text">Use cases of different entry points and journey. Communicate user flows & review prototypes with core team.
     </p>
     <img class="img-fluid w-900" src="img/mp_app3@2x.png" alt="">
-    <img class="img-fluid w-900" src="img/mp_app4@2x.png" alt="">
+    <img class="img-fluid w-900 bottom-70" src="img/mp_app4@2x.png" alt="">
 
     <h6 class="w-900 bottom-25">Identify guidelines & user interface<span class="orangebar"></span></h6>
     <p class="w-900 bottom-25 left-text">Begin to design the entire RWD website, including color palette 、timeline wall、post editor...etc
