--- a/UI_socialmedia_web.html
+++ b/UI_socialmedia_web.html
@@ -47,7 +47,7 @@
     </p>
 
     <h6 class="w-900 bottom-25">Deep into the problems we were facing…<span class="bluebar"></span></h6>
-    <p class="w-900 bottom-25 left-text">The organizational change led to the adjustment of development priorities. It was necessary to change a complete function from APP to RWD website. And needed to think about the minimum feasible version.<br><br>
+    <p class="w-900 bottom-70 left-text">The organizational change led to the adjustment of development priorities. It was necessary to change a complete function from APP to RWD website. And needed to think about the minimum feasible version.<br><br>
 
       1. Does it really need to made an RWD website?<br>
       2. Is there a mobile version requirement for the article editor?<br><br>
@@ -60,6 +60,11 @@
       
       ➤ After reframing the design requirement and scope, then come up with the users experience and design the website.
     </p>
+    
+    <h6 class="w-900 bottom-25">Product iteration cycle<span class="bluebar"></span></h6>
+    <p class="w-900 bottom-25 left-text">Iterate the design after the first version has lunched.<br>
+      <!--At first we wanted to provide users more information list in one screen, so we design the mini size image. However, according to most users's feedback, we found that readers still like to see big pictures, so we changed the image size.--></p>
+    <!--<img class="img-fluid w-900 bottom-70" src="img/mp_web7@2x.png" alt="">-->
     <img class="img-fluid w-800 bottom-70" src="img/mp_web0@2x.png" alt="">
 
     <h6 class="w-900 bottom-25">Identify guidelines & user interface<span class="bluebar"></span></h6>
@@ -77,11 +82,6 @@
     <img class="img-fluid w-900" src="img/mp_web4@2x.png" alt="">
     <img class="img-fluid w-900" src="img/mp_web5@2x.png" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/mp_web6@2x.png" alt="">
-
-    <h6 class="w-900 bottom-25">Product iteration cycle<span class="bluebar"></span></h6>
-    <p class="w-900 bottom-25 left-text">Iterate the design after the first version has lunched.<br>
-      At first we wanted to provide users more information list in one screen, so we design the mini size image. However, according to most users's feedback, we found that readers still like to see big pictures, so we changed the image size.</p>
-      <img class="img-fluid w-900 bottom-70" src="img/mp_web7@2x.png" alt="">
 
     <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
 </div>
