--- a/about.html
+++ b/about.html
@@ -48,7 +48,16 @@
 
     <div class="col-md-12 about_me">
       <h5>Work experience</h5>
-      <p class="font-gray">2019 - Present</p>
+      <p class="font-gray">2022 - Present</p>
+      <p class="font-bold font-subdark">Senior UI/UX Designer | TenMax ad Tech Lab</p>
+      <p class="font-gray">B2B platform design include DSP and SSP platform.<br>
+        Communicate and interact with different functions, deliver a high-quality UI design and
+        related elements with a consistent experience. Participate in and define product design
+        practices and guidelines. Participate in the complete product life cycle.<br>
+        Communicate and interact with business people and technical people, and explain the
+        reasons for product UI design.</p>
+
+      <p class="top-16 font-gray">2019 - 2022</p>
       <p class="font-bold font-subdark">Senior Designer | Anue 鉅亨金融科技（鉅亨網）</p>
       <p class="font-gray">Internal Website and APP UI Design.<br> 
       ★ <b><a href="https://hao.cnyes.com/" target="blank">Hao.cnyes</a></b> : This project is a social media platform
@@ -66,7 +75,7 @@
       ★ <b><a href="https://www.xn--fiqv34aqphd4v.com/tutor/Login.aspx" target="blank">AMC course selection system</a></b> : UI design and complete
       by html and css, then cooperation with RD to connection the back- ground information.</p>
        
-      <p class="top-16 font-gray">2012-2014</p>
+      <p class="top-16 font-gray">2012 - 2014</p>
       <p class="font-bold font-subdark">Graphic Designer | 風尚國際廣告事業有限公司</p>
       <p class="font-gray">DM、POSTER Design based on the ability of photoshop and illustrator.<br>
       Producing vedio by After effects and premiere.<br>
@@ -74,13 +83,14 @@
       ★ The exhibition newspaper of the TIS (Taipei IN Style Taipei Charm Show) .</p>
        
       <h5>Education</h5>
-      <p class="font-normal font-subdark">2006-2010</p>
-      <p class="font-normal font-subdark">Didital Multimedia Arts - SHU</p>
+      <p class="font-gray">2006 - 2010</p>
+      <p class="font-bold font-subdark">Didital Multimedia Arts - SHU</p>
       <p class="font-gray">3D Building and animation design skills<br>
        - Creative strategy animation planning.<br>
        - Producing visual effects Video.</p>
 
        <h5>Certificate</h5>
+       <p><b><a href="https://www.credly.com/badges/fd9429d9-1299-4ffe-b5d8-fc702fe9d4f0/public_url" target="blank">Google UX Design  →</a></b></p>
       <p><b><a href="https://coursera.org/share/4a708a4b72eaa92461b524061f3aa075" target="blank">Foundations of User Experience (UX) Design  →</a></b></p>
 
       <h5>Skill</h5>
