--- a/visual.html
+++ b/visual.html
@@ -22,10 +22,10 @@
   <hr>
   <p class="title_scribe w-900 bottom-70">Delphine designed various visuals including Campaign Page, DM, Poster, Book Cover, Light boxes, BRAND images, etc.</p>
   <!--pic-banner-->
-  <!--<div id="pic-banner" class="col-md-4">
-    <img src="img/crypto_landingpage1@2x.png" width="550" height="500" class="img-fluid">
+  <div id="pic-banner" class="col-md-4">
+    <img src="img/visual_anue.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
-      <a href="visual_crypto_landingpage.html" class="captiondetails">
+      <a href="visual_anue.html" class="captiondetails">
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Anue</h5>
@@ -34,7 +34,7 @@
         </div>
       </a>
     </div>
-  </div>-->
+  </div>
   <div id="pic-banner" class="col-md-4">
     <img src="img/visual_invesco.png" width="550" height="500" class="img-fluid">
     <div class="caption">
