--- a/visual_anue.html
+++ b/visual_anue.html
@@ -24,24 +24,24 @@
 <!-- Common header end-->
 
 <div id="webdesign" class="container">
-    <h2 class="title top-25">Invesco</h2>
+    <h2 class="title top-25">Anue Landing page</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">RWD Campaign Page<br>
-        The entire event page is based on Van Gogh's The Starry Night.<br>
-        I designed the key visual and used html and css to complete them.</p>
-    <a class="bottom-25" href="https://campaign.cnyes.com/topics/invescoGIGC/" target="blank">link to web →</a>
-    <img class="img-fluid w-900" src="img/invesco1@2x.png" alt="">
-    <img class="img-fluid w-900" src="img/invesco2@2x.png" alt="">
-    <img class="img-fluid w-900" src="img/invesco3@2x.png" alt="">
-    <img class="img-fluid w-900" src="img/invesco4@2x.png" alt="">
+    <p class="title_scribe w-800 bottom-70">I worked at Anue鉅亨網 from 2019-2022 as a designer. This included Series RWD landing page design for website and social media. I designed the key visual and used html and css to complete them.</p>
+    <img class="img-fluid w-900 bottom-25" src="img/anue-newsapp.jpg" alt="">
+    <p class="title_scribe w-900 bottom-25">Anue news app langing page</p>
+    <a class="bottom-70" href="https://www.cnyes.com/mobile/" target="blank">link to web →</a>
+    
+    <img class="img-fluid w-900 bottom-25" src="img/anue-crypto.jpg" alt="">
+    <p class="title_scribe w-900 bottom-25">Anue crypto campaign page</p>
+    <a class="bottom-70" href="https://campaign.cnyes.com/topics/anuecrypto/" target="blank">link to web →</a>
     <!--<img class="img-fluid w-800 bottom-70" src="img/Invesco_pic1.gif" alt="">-->
-    <p>Copyright © Invesco</p>
+    <p>Copyright © Anue</p>
     <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="visual_anue.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="visual_iroo.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow left font-darkgray" href="visual_dora.html"><img src="img/arr_left.png"> Previous</a>
+<a class="line-arrow right font-darkgray" href="visual_Invesco.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
