--- a/visual_dora.html
+++ b/visual_dora.html
@@ -42,7 +42,7 @@
 
 <!--page-->
 <a class="line-arrow left font-darkgray" href="visual_bookcover_taitra.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="visual_crypto_landingpage.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow right font-darkgray" href="visual_anue.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
