--- a/visual.html
+++ b/visual.html
@@ -36,7 +36,7 @@
     </div>
   </div>
   <div id="pic-banner" class="col-md-4">
-    <img src="img/visual_invesco.png" width="550" height="500" class="img-fluid">
+    <img src="img/visual_invesco.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="visual_Invesco.html" class="captiondetails">
         <div class="caption-warp">
