--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
       <p class="font-gray">Adobe XD / Sketch / Figma / Wireframing / Prototyping</p>
     
       <p class="top-16 font-bold font-subdark">Web Design</p>
-      <p class="font-gray">Responsive Design / HTML / CSS / bootstrap</p>
+      <p class="font-gray">Responsive Design / HTML / CSS / CSS3 / Bootstrap / JQuery Plugin Use</p>
        
       <p class="top-16 font-bold font-subdark">Graphic Design</p>
       <p class="font-gray">Adobe Photoshop / Illustrator / In Design / Typography</p>
