--- a/visual_anue.html
+++ b/visual_anue.html
@@ -26,13 +26,14 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">Anue Landing page</h2>
     <hr>
-    <p class="title_scribe w-800 bottom-70">I worked at Anue鉅亨網 from 2019-2022 as a designer. This included Series RWD landing page design for website and social media. I designed the key visual and used html and css to complete them.</p>
+    <p class="title_scribe w-800 bottom-70">I worked at Anue鉅亨網 from 2019-2022 as a designer. This included Series RWD landing page design for website.</p>
     <img class="img-fluid w-900 bottom-25" src="img/anue-newsapp.jpg" alt="">
     <p class="title_scribe w-900 bottom-25">Anue news app langing page</p>
     <a class="bottom-70" href="https://www.cnyes.com/mobile/" target="blank">link to web →</a>
     
     <img class="img-fluid w-900 bottom-25" src="img/anue-crypto.jpg" alt="">
     <p class="title_scribe w-900 bottom-25">Anue crypto campaign page</p>
+    <p class="title_scribe w-900 bottom-25">I designed the key visual and used html and css to complete them.</p>
     <a class="bottom-70" href="https://campaign.cnyes.com/topics/anuecrypto/" target="blank">link to web →</a>
     <!--<img class="img-fluid w-800 bottom-70" src="img/Invesco_pic1.gif" alt="">-->
     <p>Copyright © Anue</p>
