--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
     <h3>Hi there, I'm Delphine Lan! 👋 </h3>
     <h5>Design</h5>
     <p class="font-gray"> ▪ User interface design and process plan <br>
+      ▪ User experience research and design<br> 
       ▪ Wireframe and prototype production <br>
       ▪ Develop project guideline specifications<br> 
       ▪ Product experience design, visual design <br>
