--- a/visual.html
+++ b/visual.html
@@ -35,7 +35,7 @@
       </a>
     </div>
   </div>
-  <div id="pic-banner" class="col-md-4">
+  <!--<div id="pic-banner" class="col-md-4">
     <img src="img/visual_invesco.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="visual_Invesco.html" class="captiondetails">
@@ -47,7 +47,7 @@
         </div>
       </a>
     </div>
-  </div>
+  </div>-->
   <!--<div id="pic-banner" class="col-md-4">
     <img src="img/Visual_cheers.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
